# image2biomass

./: .gitignore  CLAUDE.md  cnp.yaml  config.yaml  data_preprocessing.py  debug_config.yml  eda.ipynb  image_processing.py  pyproject.toml  sweep.yaml  test_preprocessing.py  train.py
scripts/: create-instance.sh  remote-setup.sh  run_sweep.sh
src/: benchmark.py  data_preprocessing.py  image_processing.py  models.py  per_class_head.py  predict_metadata.ipynb  setup.sh  submission.py  train.py  utils.py
