[project]
name = "image2biomass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "kaggle>=1.8.3",
    "kagglehub>=0.3.13",
]
